codegen/tests/failures/value_argument.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> $DIR/value_argument.rs:4:23
  |
4 | fn value_arguement(_: usize) {}
  |                       ^^^^^
  |
help: change the delimiters to curly braces
  |
4 | fn value_arguement(_: {}) {}
  |                       ^
help: add a semicolon
  |
4 | fn value_arguement(_: usize;) {}
  |                            ^

error: system function parameters must be `CommandBuffer` or `SubWorld` references, [optioned] component references, state references, or resource references
 --> $DIR/value_argument.rs:4:23
  |
4 | fn value_arguement(_: usize) {}
  |                       ^^^^^
